# nevolver

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  LICENSE  bench1.cpp  connections.hpp  main.cpp  network.hpp  neurofloat.hpp  nevolver.carp  nevolver.hpp  node.hpp  random.hpp  squash.hpp
.github/workflows/: main.yml
chainblocks/: blocks.cpp  test-conv.clj  test-genetic-conv.clj  test-genetic1.clj  test-mlp.clj
networks/: liquid.hpp  lstm.hpp  mlp.hpp  narx.hpp  perceptron.hpp
nodes/: annhidden.hpp
src/: lib.rs
tests/: main.cpp
