[package]
name = "nevolver"
version = "0.1.0"
authors = ["Giovanni Petrantoni <giovanni@fragcolor.xyz>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
name = "nevolver"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
